[workspace]
members = ["crates/*", "dbn-mbo-lib"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.42" }
anyhow = { version = "1.0.100" }
dbn = { version = "0.44.0" }
dbn-cli = { version = "0.44.0" }
dbn-macros = { version = "0.44.0" }
fallible-streaming-iterator = { version = "0.1.9" }
zstd = { version = "0.13.3" }
dbn_mbo_engine = { path = "crates/dbn_mbo_engine", version = "0.1.0" }
dbn_mbo_graphing = { path = "crates/dbn_mbo_graphing", version = "0.1.0" }
dbn_mbo_internal = { path = "crates/dbn_mbo_internal", version = "0.1.0" }
crossbeam = { version = "0.8.4" }
plotpy = { version = "1.14.0" }
