[workspace]
members = ["crates/*", "mbo-lib"]
resolver = "2"

[workspace.dependencies]
mbo_engine = { path = "crates/mbo_engine", version = "0.1.0" }
mbo_graphing = { path = "crates/mbo_graphing", version = "0.1.0" }
mbo_internal = { path = "crates/mbo_internal", version = "0.1.0" }
mbo_tui = { path = "crates/mbo_tui", version = "0.1.0" }
anyhow = { version = "1.0.100" }
dbn = { version = "0.44.0" }
fallible-streaming-iterator = { version = "0.1.9" }
zstd = { version = "0.13.3" }
rand = { version = "0.9.2" }
rtrb = { version = "0.3.2" }
chrono = { version = "0.4.42" }
hashbrown = { version = "0.16.1" }

[profile.release]
debug = true
