[package]
name = "mbo_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dbn = { workspace = true }
zstd = { workspace = true }
fallible-streaming-iterator = { workspace = true }
rtrb = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
